# BEClust3D

./: .gitignore  BEClust3D_v1_MultiScreen_SingleGene.ipynb  BEClust3D_v1_SingleScreen_SingleGene.ipynb  README.md  SingleScreen_MultipleGene_v1.ipynb  pyproject.toml  requirements.txt  requirements_arm.yaml  requirements_linux64.yaml
beclust3d/: __init__.py  _average_split_bin_helpers_.py  _average_split_bin_plots_.py  _conservation.py  _metaaggregation.py  _preprocess_be_results_hypothesis_.py  _preprocess_be_results_plots_.py  _prioritize_by_conservation.py  _prioritize_by_sequence_plots_.py  _randomize_by_conservation.py  _uniprot_annot.py  af_structural_features.py  annotate_spatial_clusters.py  average_split_bin_lfc3d.py  average_split_bin_metaaggregation.py  average_split_bin_plot.py  average_split_lfc3d.py  binning_lfc3d.py  calculate_lfc3d.py  characterization.py  characterization_plots.py  conservation.py  dev_testing.ipynb  hypothesis_tests.py  lfc_qc.py  metaaggregation.py  preprocess_be_results.py  prioritize_by_conservation.py  prioritize_by_sequence.py  randomize_be_results.py  randomize_by_conservation.py  randomize_by_sequence.py  randomize_preprocessed_be_results.py
examples/: men1.fasta  men1.py  molm13.tsv  mv411.tsv
tests/: test_afstructuralfeatures.py  test_annotatespatialclusters.py  test_averagesplitlfc3d.py  test_binninglfc3d.py  test_calculatelfc3d.py  test_conservation.py  test_integration_annotatespatialclusters.py  test_integration_averagesplitlfc3d.py  test_integration_binninglfc3d.py  test_integration_calculatelfc3d.py  test_integration_metaaggregation.py  test_metaaggregation.py  test_preprocessberesults.py  test_prioritizebyconservation.py  test_randomizebyconservation.py  test_randomizepreprocessedbyresults.py  variables.py
