[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beclust3d"
version = "2024.0.0"
dependencies = [
  "numpy",
  "matplotlib",
  "seaborn",
  "pandas",
  "scipy",
  "biopython",
  "DSSPparser",
  "biopandas",
  "sklearn", 
]
requires-python = ">=3.9"
authors = [
  {name = "Calvin XiaoYang Hu", email = "xiaohu@g.harvard.edu"},
  {name = "Surya Mani", email = ""},
  {name = "Sumaiya Iqbal", email = ""},
]
maintainers = [
  {name = "Calvin XiaoYang Hu", email = "xiaohu@g.harvard.edu"},
]
description = "Package for prioritizing and clustering base editing screen scores based on structure and conservation."
readme = "README.md"
license = {file = "LICENSE.txt"}

[project.urls]
Repository = "https://github.com/broadinstitute/BEClust3D.git"
