[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beclust3d"
version = "2024.0.0"
authors = [
  {name = "Calvin XiaoYang Hu", email = "xiaohu@g.harvard.edu"},
  {name = "Surya Mani", email = ""},
  {name = "Sumaiya Iqbal", email = ""},
]
dependencies = [
  "numpy",
  "matplotlib",
  "seaborn",
  "pandas",
  "scipy",
  "biopython",
  "biopandas",
  "sklearn", 
]
requires-python = ">=3.9"
description = "Package for prioritizing and clustering base editing screen scores based on structure and conservation."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
maintainers = [
  {name = "Calvin XiaoYang Hu", email = "xiaohu@g.harvard.edu"},
]
license = {file = "LICENSE.txt"}

[project.optional-dependencies]
test = [
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/broadinstitute/BEClust3D"
"Repository" = "https://github.com/broadinstitute/BEClust3D.git"
