[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beclust3d"
version = "2024.0.0"
authors = [
  {name = "Calvin XiaoYang Hu", email = "xiaohu@g.harvard.edu"}
]
dependencies = [
  "numpy",
  "matplotlib",
  "seaborn",
  "pandas",
  "scipy",
  "biopython",
  "biopandas",
  "sklearn",
]
requires-python = ">=3.9"
description = "Package for prioritizing and clustering base editing screen scores based on structure and conservation."
readme = "README.md"
license = {file = "LICENSE.txt"}
